# personal-meeting-assistant

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 13997c20c3c6_add_sync_source_to_meetings.py  48ed63022bdd_initial_schema.py  a9bf8a019ab4_add_briefings_table.py  b7e3f1a20c91_add_result_summary_to_agent_run_log.py  c4a1e7f30d12_add_next_call_brief_to_meetings.py  d5b2c8e41f03_add_app_settings_table.py  e6f3a2b70d14_add_aliases_to_profiles.py
backend/app/: config.py  main.py
backend/app/agents/: base.py  briefing_generator.py  calendar_agent.py  entity_extraction.py  meeting_sync.py  profile_builder.py  registry.py  relationship_builder.py  run_tracker.py
backend/app/api/: dependencies.py
backend/app/api/routes/: action_items.py  agents.py  briefings.py  calendar.py  connections.py  meetings.py  profiles.py  relationships.py  search.py  settings.py  status.py
backend/app/api/schemas/: common.py  meetings.py  profiles.py  search.py
backend/app/db/: neo4j_driver.py  postgres.py
backend/app/mcp/: base.py  registry.py
backend/app/models/: __init__.py  action_item.py  agent_run_log.py  app_setting.py  base.py  briefing.py  connection.py  meeting.py  processing_status.py  profile.py
backend/app/services/: connection_service.py  embedding_service.py  encryption_service.py  entity_resolution_service.py  meeting_service.py  neo4j_service.py  scheduler.py  search_service.py  transcript_service.py
(+46 files in other folders)
